--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forms-node",
-  "description": "A Ful stack implemtation of a simple form using Node.js",
+  "description": "A Full stack implementation of a simple form using Node.js",
   "version": "1.0.0",
   "main": "server.js",
   "keywords": [],
